# eva

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Package.swift  README.md  TODO  changelog  eva.mk  license  makefile  test.cpp
.arxived/: README.md
.arxived/cmd/shasum/: main.cpp
.arxived/eva/Crypto/: Crypto.h  Sha256.cpp  Sha256.h
.arxived/eva/FileSystem/: FileReader.cpp  FileTree.cpp  Glob.cpp  Glob.h  Walk.cpp  Walk.h
.arxived/eva/Foundation/: CMakeLists.txt  Errors.cpp  Status.cpp  StatusOr.cpp  StatusOr.h  StatusOrTest.cpp  Strings.h  StringsTest.cpp
Docs/: Development.md  SwiftForTensorFlow.md
Sources/Cron/: main.swift
Sources/Eva/Cron/: CronExpression+NextDate.swift  CronExpression.swift
Sources/Eva/Cron/Expression/: CronExpression+NextDate.swift  CronExpression.swift  Field.swift
Sources/Eva/Cron/Parser/: AST.swift  Lexer.swift  LexerBuffer+ASCII.swift  LexerBuffer+Character.swift  LexerBuffer+CodeUnit.swift  LexerBuffer.swift  Parser.swift  Token.swift
Sources/Lib/Cron/: Field.swift
Sources/eva/: eva.swift
Tests/: LinuxMain.swift
Tests/EvaTests/: EvaTests.swift  XCTestManifests.swift
Tests/EvaTests/Cron/: CronExpression+NextDateTest.swift  CronExpressionTest.swift  FieldTest.swift
Tests/EvaTests/Cron/Expression/: CronExpression+NextDateTest.swift  CronExpressionTest.swift  FieldTest.swift
Tests/EvaTests/Cron/Parser/: LexerBufferCharacterTest.swift  LexerBufferCodeUnitTest.swift  LexerBufferTest.swift  LexerTest.swift  ParserTest.swift
Tests/LibTests/Cron/: FieldTest.swift
c/: ExpressionTest.cpp
c/cron/: field.c  field.h
cmd/cron/: cron.1  main.c  main.cpp
cmd/scanner/: Database.h  main.cpp
cmd/shasum/: main.cpp
cmd/soduku/: README.md  main.c
cmd/sudoku/: README.md  main.c
cmd/test/: main.c  test.h
data/: changelog
deprecated/Docs/: Development.md
deprecated/Sources/Eva/Cron/Expression/: CronExpression+NextDate.swift  CronExpression.swift
deprecated/Sources/Eva/Cron/Parser/: Lexer.swift  LexerBuffer+ASCII.swift  LexerBuffer+CodeUnit.swift
deprecated/Tests/: LinuxMain.swift
deprecated/Tests/EvaTests/: XCTestManifests.swift
deprecated/Tests/EvaTests/Cron/Parser/: LexerBufferCodeUnitTest.swift  LexerBufferTest.swift  LexerTest.swift  ParserTest.swift
doc/: format.tex  ints.md  readme.md
doc/c_spec/: ints.md
doc/taocp/: book.toml  vol_4.tex
doc/taocp/src/: SUMMARY.md  vol_4.md
dockerfiles/: Dockerfile.cron
docs/: CppNotes.md  CppTODO.md  cron.1  cron.md
docs/notes/: Makefile  format.tex  iso.md  iso.tex
docs/usages/: cron.md
eva/Cron/: Expression.cpp  Expression.h  Field.h
eva/Crypto/: CMakeLists.txt  Crypto.h  Sha256Test.cpp
eva/FileSystem/: CMakeLists.txt  FileReader.cpp  FileReader.h  FileReaderTest.cpp  FileSystem.h  FileTree.h  GlobTest.cpp  Utility.cpp  Utility.h
eva/Foundation/: CMakeLists.txt  Errors.h  ErrorsTest.cpp  Foundation.h  Macros.h  Status.h  StatusOr.h  StatusOrTest.cpp  StatusTest.cpp  Strings.h
lib/Cron/: Cron.h
lib/Cron/Expression/: CMakeLists.txt  Expression.cpp  Expression.h  ExpressionTest.cpp  Field.h
lib/Crypto/: CMakeLists.txt  Sha256.cpp  Sha256.h  Sha256Test.cpp
lib/FileSystem/: CMakeLists.txt  FileReader.cpp  FileReader.h  FileReaderTest.cpp  FileSystem.h  FileTree.cpp  FileTree.h  Glob.cpp  Glob.h  GlobTest.cpp  Utility.cpp  Utility.h  Walk.cpp  Walk.h
lib/Support/: CMakeLists.txt  Constant.h  Error.cpp  Error.h  Support.h  Types.h
src/: CMakeLists.txt  Expression.h  ExpressionTest.cpp
src/adt/: README.txt  dict.c  dict.h  dict_test.c  graph.h  hashing.c  hashing.h  list.h  map.c  map.h  map_test.c  readme.txt  sds.c  sds.h  sds_test.c  value.c  value.h  value_test.c  vec.c  vec.h  vec_test.c
src/algorithms/: README.md  dancing_links.c  dancing_links.h  dancing_links_test.c  diff.c  diff.h  diff_test.c  readme.md
src/base/: defs.h  error.c  error.h
src/cron/: cron_test.c  expr.c  expr.h  field.c  field.h  readme.txt
src/crypto/: readme.txt  sha256.c  sha256.h  sha256_test.c
src/rng/: Makefile  main.c  readme.txt  rng64.c  rng64.h  rng64normal.c  rng64normal.h  srng64.c  srng64.h  srng64_normal.c  srng64_normal.h  srng64_normal_test.c  srng64_test.c
src/testing/: testing.h
tests/lib/Expression/: CMakeLists.txt  ExpressionTest.cpp
tests/lib/Support/: CMakeLists.txt  ErrorTest.cpp
tools/cron/: main.cpp
tools/eva-config/: Makefile  main.cpp
utils/: update-dependencies
